fix upgrade button alignment

--- a/customize.dist/src/less2/include/limit-bar.less
+++ b/customize.dist/src/less2/include/limit-bar.less
@@ -57,12 +57,12 @@
             flex-wrap: wrap;
             justify-content: space-around;
             justify-content: space-evenly;
-            padding: 2px;
+            //padding: 2px;
             a {
                 height: 25px;
                 display: inline-flex;
                 align-items: center;
-                min-width: 200px;
+                min-width: 150px;
                 margin: 2px;
                 width: 50%;
                 padding-top: 0;
